--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div id="fizzbuzz"></div>
+    <div id="fizzbuzz" class="grid"></div>
     <script src="./js/app.js"></script>
 </body>
 </html>
